Implemented Swagger 2.0
