# main.go
@@ -1,11 +1,15 @@
-// @title Simple Product Api Visualization
+// @title Product Catalogue Service
 // @version 1.0
-// @description A Product Catalogue API with Swagger Documentation
-
+// @description A product catalogue API in Go. for this project, JWT token generated with HS256 algo is needed to test Authorization filter
 // @host localhost:8080
-// @Basepath /
-
-// @security.Definitions.apikey Bearer
+// @Basepath /api/v1
+// @tag.name Public
+// @tag.description Public operations
+// @tag.name User
+// @tag.description Operations restricted only to user with role "User"
+// @tag.name Admin
+// @tag.description Operations restricted only to user with role "Admin"
+// @SecurityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
 // @description Type "Bearer" followed by a space and JWT Token
@@ -15,13 +19,13 @@ import (
 	"fmt"
 	"net/http"
 	"simple-product-api/config"
+	_ "simple-product-api/docs"
 	"simple-product-api/handler"
 	"simple-product-api/repository"
 	"simple-product-api/route"
 	"simple-product-api/service"
-	_ "simple-product-api/docs"
-	httpSwagger "github.com/swaggo/http-swagger"
 	"github.com/go-chi/chi/v5"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 func main() {
@@ -43,8 +47,10 @@ func main() {
 	route := route.NewProductRoute(prodHandler, userHandler)
 
 	r := chi.NewRouter()
-	route.RouteSetup(r)
-
+	r.Route("/api/v1", func(r chi.Router) {
+		route.RouteSetup(r)
+	})
+	
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
 	err := http.ListenAndServe(config.GetMainPort(), r)
 	if err != nil {
